changed size of answer and question text area

--- a/client/partials/answer.html
+++ b/client/partials/answer.html
@@ -9,7 +9,7 @@
 <form ng-submit='qC.createAnswer()'>
   <span>Your Answer:</span>
   <br>
-  <textarea name="title" rows="8" cols="40" ng-model='qC.answer.title' minLength='5'></textarea>
+  <textarea name="title" rows="8" cols="40" ng-model='qC.answer.title' minLength='5' required></textarea>
   <br>
   <span>Supporting details to your answer (optional)</span>
   <br>
